Fixing progress meters in classic on mac (bug 197289).  Use nsString::ToInteger correctly.  r=shuehan, sr=jag, a=sspitzer.